set correct letter spacing in pagination

--- a/index.css
+++ b/index.css
@@ -315,6 +315,7 @@ nav {
 	font-size: 30px;
 	transform: translate(-50%, 0);
 	color: #5F5F5F;
+	letter-spacing: 0;
 }
 
 .current-page {
